--- a/.github/workflows/covid19appmain.yml
+++ b/.github/workflows/covid19appmain.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: covid-19-Tracker-App-Nouman
+name: Covid-19-Tracker-App-Nouman
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -37,4 +37,4 @@ jobs:
       run: npm install --global surge
       
     - name: Deploy to Surge
-      run: surge ./build covid-19-tracker-nouman.surge.sh --token ${{secrets.MYCOVIDSECRET}}
+      run: surge ./build covid19-tracker-app-nouman.surge.sh --token ${{secrets.MY_COVID_SECRET}}
